@@ -1,3 +1,13 @@
+*** 20010610_2 by kreator
+- added /usr/pkg and /usr/local paths for openssl detection since i have
+  systems with those paths used for ssl - NetBSD, etc.
+
+
+*** 20010610_1 by db
+- moved LITTLE_I_LINES into "not supported" section *sigh*
+
+
+
 *** 20010609_5 by db
 - #ifdef'ed out features not approved on EFNet KNOCK and +e *sigh*
 
